@@ -35,6 +35,7 @@ setClass("AllModelClass",
                         infomethod='character',
                         factorNames='character',
                         method='character',
+                        accelerate='character',
                         Moptim='character',
                         itemtype='character',
                         time='numeric',
