@@ -716,6 +716,7 @@ ESTIMATION <- function(data, model, group, itemtype = NULL, guess = 0, upper = 1
                    Pl=Pl,
                    K=Data$K,
                    bfactor=list(),
+                   accelerate=opts$accelerate,
                    CUSTOM.IND=CUSTOM.IND,
                    SLOW.IND=SLOW.IND,
                    nest=as.integer(dfsubtr),
@@ -791,6 +792,7 @@ ESTIMATION <- function(data, model, group, itemtype = NULL, guess = 0, upper = 1
                            h2=h2,
                            Theta=Theta,
                            Pl=Pl[[1L]],
+                           accelerate=opts$accelerate,
                            empiricalhist=opts$empiricalhist,
                            Prior=ESTIMATE$Prior,
                            CUSTOM.IND=CUSTOM.IND,
@@ -832,6 +834,7 @@ ESTIMATION <- function(data, model, group, itemtype = NULL, guess = 0, upper = 1
                            SElogLik=SElogLik,
                            F=F,
                            h2=h2,
+                           accelerate=opts$accelerate,
                            CUSTOM.IND=CUSTOM.IND,
                            SLOW.IND=SLOW.IND,
                            Theta=Theta,
@@ -889,6 +892,7 @@ ESTIMATION <- function(data, model, group, itemtype = NULL, guess = 0, upper = 1
                        Theta=Theta,
                        Pl=Pl,
                        K=Data$K,
+                       accelerate=opts$accelerate,
                        CUSTOM.IND=CUSTOM.IND,
                        SLOW.IND=SLOW.IND,
                        bfactor=if(opts$method == 'EM') 
