@@ -18,7 +18,10 @@ setMethod(
             cat("FAILED TO CONVERGE within ", x@TOL, ' tolerance after ', 
                 x@iter, ' ', method, " iterations.\n", sep="")
         cat('mirt version:', as.character(packageVersion('mirt')), '\n')
-        cat('M-step optimizer used:', x@Moptim, '\n')
+        cat('M-step optimizer:', x@Moptim, '\n')
+        cat('EM acceleration:', x@accelerate)
+        cat('\nNumber of rectangular quadrature:', x@quadpts)
+        cat('\n')
         if(!is.nan(x@condnum)){
             cat("\nInformation matrix estimated with method:", x@infomethod)
             cat("\nCondition number of information matrix = ", x@condnum,
