@@ -19,8 +19,8 @@ test_that('dich data', {
     sum <- summary(mod1, verbose = FALSE)
     expect_is(sum, 'list')
     fs <- fscores(mod1, method = 'EAPsum', verbose = FALSE)
-    expect_equal(fs[1:3,'Theta.1'], c(-3.083753, -3.026068, -2.954776), tolerance = 1e-4)
-    expect_equal(fs[1:3,'Theta.2'], c(-1.3740075, -1.0941978, -0.7995006), tolerance = 1e-4)
+    expect_equal(fs[1:3,'Theta.1'], c(-3.086056, -3.028396, -2.959453), tolerance = 1e-4)
+    expect_equal(fs[1:3,'Theta.2'], c(-1.3570073, -1.0763397, -0.7812878), tolerance = 1e-4)
     fit <- M2(mod1)
     expect_equal(fit$M2, 712.5701, tolerance = 1e-2)
     expect_equal(fit$df, 432, tolerance = 1e-2)
