@@ -33,7 +33,7 @@ test_that('extras', {
     acov <- fscores(mod1, return.acov=TRUE)
     expect_equal(acov[[1]][1], 0.4799239, tolerance=1e-3)
     acov <- fscores(mod1, return.acov=TRUE, full.scores=TRUE)
-    expect_equal(acov[[500]][1], 0.4994252, tolerance=1e-3)
+    expect_equal(acov[[500]][1], 0.4987313, tolerance=1e-3)
     acov <- fscores(model1a, return.acov=TRUE, full.scores=TRUE)
     expect_equal(acov[[500]][1], .3452783, tolerance=1e-3)
     boot <- boot.mirt(model1a, R=5)
@@ -61,17 +61,17 @@ test_that('extras', {
     extr.2 <- extract.item(mod1, 2)
     Theta <- matrix(seq(-6,6, length.out=200))
     expected <- expected.item(extr.2, Theta)
-    expect_equal(expected[1:3], c(0.003424612, 0.003654262, 0.003899251), tolerance=1e-4)
+    expect_equal(expected[1:3], c(0.003411029, 0.003639925, 0.003884122), tolerance=1e-4)
     expected <- expected.test(mod1, Theta=Theta)
-    expect_equal(expected[1:3], c(0.1080442, 0.1130618, 0.1183069), tolerance=1e-4)
+    expect_equal(expected[1:3], c(0.1083150, 0.1133415, 0.1185956), tolerance=1e-4)
     data[1,1] <- NA
     data <- imputeMissing(mod1, Theta=fscores(mod1, full.scores=TRUE))
     expect_is(data, 'matrix')
     expect_true(!all(is.na(data)))
     pb <- probtrace(extr.2, Theta)
-    expect_equal(pb[1:3, 1], c(0.9965754, 0.9963457, 0.9961007), tolerance = 1e-5)
+    expect_equal(pb[1:3, 1], c(0.9965890, 0.9963601, 0.9961159), tolerance = 1e-5)
     ti <- testinfo(mod1, Theta=Theta)
-    expect_equal(ti[1:3, 1], c(0.06600353, 0.06910696, 0.07235155), tolerance = 1e-5)
+    expect_equal(ti[1:3, 1], c(0.06607895, 0.06918330, 0.07242870), tolerance = 1e-5)
     set.seed(1234)
     fs <- fscores(mod1, MI=20, verbose=FALSE)
     expect_is(fs, 'matrix')
