@@ -17,6 +17,9 @@ MAJOR CHANGES
   - computation of `S_X2` statistic in `itemfit` now much more stable for
   polytomous item types
 
+  - support for the `plink` package now unofficially dropped because it was
+  removed from CRAN
+
 NEW FEATURES
 
   - `mdirt` function added to model discrete latent variables such as latent
@@ -54,6 +57,8 @@ BUG FIXES
 
   - fixed bug in `bfactor()` starting values when NAs were specified in the
   `model` argument
+
+  - adjust overly optimistic termination criteria in EM algorithm
 
 Changes in mirt 1.5
 
